; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_PicoRead16_sprot.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_PicoRead16_sprot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_UIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"prot r16 [%06x] %04x @%06x\00", align 1
@SekPc = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"prot r16 [%06x] MISS @%06x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @PicoRead16_sprot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @PicoRead16_sprot(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp sle i32 10551296, %5
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 10559488
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @PicoRead16_io(i32 %11)
  store i32 %12, i32* %2, align 4
  br label %32

13:                                               ; preds = %7, %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32* @carthw_sprot_get_val(i32 %14, i32 0)
  store i32* %15, i32** %4, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %27

18:                                               ; preds = %13
  %19 = load i32, i32* @EL_UIO, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @SekPc, align 4
  %24 = call i32 (i32, i8*, i32, i32, ...) @elprintf(i32 %19, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %22, i32 %23)
  %25 = load i32*, i32** %4, align 8
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %2, align 4
  br label %32

27:                                               ; preds = %13
  %28 = load i32, i32* @EL_UIO, align 4
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* @SekPc, align 4
  %31 = call i32 (i32, i8*, i32, i32, ...) @elprintf(i32 %28, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %29, i32 %30)
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %27, %18, %10
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @PicoRead16_io(i32) #1

declare dso_local i32* @carthw_sprot_get_val(i32, i32) #1

declare dso_local i32 @elprintf(i32, i8*, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
